--- a/client/styles/app.css
+++ b/client/styles/app.css
@@ -16,19 +16,12 @@ body{
 #list-doc .react-pdf__Page{
     height: 100% !important;
 }
-
+/* 
 .react-pdf__Page__canvas{
     width: 100% !important;
-    height: 100% !important;
+    
 }
 .react-pdf__Page__textContent{
-    width: 100% !important;
-    height: 100% !important;
-}
-.react-pdf__Document{
-    height: 100% !important;
-}
-.react-pdf__Page{
-    height: 100% !important;
-}
+    width: 100% !important; 
+} */
 
