update server front-end config tailwind

--- a/client/styles/app.css
+++ b/client/styles/app.css
@@ -180,3 +180,10 @@ body{
     width: 100% !important; 
 } */
 
+.view-pdf-s{
+    height: 500px;
+}
+.view-pdf-s .pg-viewer-wrapper{
+    overflow: hidden;
+}
+
