--- a/client/styles/app.css
+++ b/client/styles/app.css
@@ -196,8 +196,16 @@ body{
 
 .detail-doc .react-pdf__Page__canvas {
  width: 100% !important;
+ height: 100% !important; 
+}
+.detail-doc .react-pdf__Document{
+    height: 100% !important;
+}
+.detail-doc .react-pdf__Document .react-pdf__Page{
+    height: 100% !important;
 }
 
 .detail-doc .react-pdf__Page__canvas .react-pdf__Page__textContent{
  width: 100% !important;
+ height: 100% !important;
 }
